new grid correlation graphs and update/delete so current benchmarks are correct

--- a/benchmarks/frechet_benchmark.ipynb
+++ b/benchmarks/frechet_benchmark.ipynb
@@ -117,127 +117,37 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Cy Pool Frechet: 0/50\n",
-            "Cy Pool Frechet: 5/50\n",
-            "Cy Pool Frechet: 10/50\n",
-            "Cy Pool Frechet: 15/50\n",
-            "Cy Pool Frechet: 20/50\n",
-            "Cy Pool Frechet: 25/50\n",
-            "Cy Pool Frechet: 30/50\n",
-            "Cy Pool Frechet: 35/50\n",
-            "Cy Pool Frechet: 40/50\n",
-            "Cy Pool Frechet: 45/50\n",
-            "Cy Pool Frechet: 0/500\n",
-            "Cy Pool Frechet: 5/500\n",
-            "Cy Pool Frechet: 10/500\n",
-            "Cy Pool Frechet: 15/500\n",
-            "Cy Pool Frechet: 20/500\n",
-            "Cy Pool Frechet: 25/500\n",
-            "Cy Pool Frechet: 30/500\n",
-            "Cy Pool Frechet: 35/500\n",
-            "Cy Pool Frechet: 40/500\n",
-            "Cy Pool Frechet: 45/500\n",
-            "Cy Pool Frechet: 50/500\n",
-            "Cy Pool Frechet: 55/500\n",
-            "Cy Pool Frechet: 60/500\n",
-            "Cy Pool Frechet: 65/500\n",
-            "Cy Pool Frechet: 70/500\n",
-            "Cy Pool Frechet: 75/500\n",
-            "Cy Pool Frechet: 80/500\n",
-            "Cy Pool Frechet: 85/500\n",
-            "Cy Pool Frechet: 90/500\n",
-            "Cy Pool Frechet: 95/500\n",
-            "Cy Pool Frechet: 100/500\n",
-            "Cy Pool Frechet: 105/500\n",
-            "Cy Pool Frechet: 110/500\n",
-            "Cy Pool Frechet: 115/500\n",
-            "Cy Pool Frechet: 120/500\n",
-            "Cy Pool Frechet: 125/500\n",
-            "Cy Pool Frechet: 130/500\n",
-            "Cy Pool Frechet: 135/500\n",
-            "Cy Pool Frechet: 140/500\n",
-            "Cy Pool Frechet: 145/500\n",
-            "Cy Pool Frechet: 150/500\n",
-            "Cy Pool Frechet: 155/500\n",
-            "Cy Pool Frechet: 160/500\n",
-            "Cy Pool Frechet: 165/500\n",
-            "Cy Pool Frechet: 170/500\n",
-            "Cy Pool Frechet: 175/500\n",
-            "Cy Pool Frechet: 180/500\n",
-            "Cy Pool Frechet: 185/500\n",
-            "Cy Pool Frechet: 190/500\n",
-            "Cy Pool Frechet: 195/500\n",
-            "Cy Pool Frechet: 200/500\n",
-            "Cy Pool Frechet: 205/500\n",
-            "Cy Pool Frechet: 210/500\n",
-            "Cy Pool Frechet: 215/500\n",
-            "Cy Pool Frechet: 220/500\n",
-            "Cy Pool Frechet: 225/500\n",
-            "Cy Pool Frechet: 230/500\n",
-            "Cy Pool Frechet: 235/500\n",
-            "Cy Pool Frechet: 240/500\n",
-            "Cy Pool Frechet: 245/500\n",
-            "Cy Pool Frechet: 250/500\n",
-            "Cy Pool Frechet: 255/500\n",
-            "Cy Pool Frechet: 260/500\n",
-            "Cy Pool Frechet: 265/500\n",
-            "Cy Pool Frechet: 270/500\n",
-            "Cy Pool Frechet: 275/500\n",
-            "Cy Pool Frechet: 280/500\n",
-            "Cy Pool Frechet: 285/500\n",
-            "Cy Pool Frechet: 290/500\n",
-            "Cy Pool Frechet: 295/500\n",
-            "Cy Pool Frechet: 300/500\n",
-            "Cy Pool Frechet: 305/500\n",
-            "Cy Pool Frechet: 310/500\n",
-            "Cy Pool Frechet: 315/500\n",
-            "Cy Pool Frechet: 320/500\n",
-            "Cy Pool Frechet: 325/500\n",
-            "Cy Pool Frechet: 330/500\n",
-            "Cy Pool Frechet: 335/500\n",
-            "Cy Pool Frechet: 340/500\n",
-            "Cy Pool Frechet: 345/500\n",
-            "Cy Pool Frechet: 350/500\n",
-            "Cy Pool Frechet: 355/500\n",
-            "Cy Pool Frechet: 360/500\n",
-            "Cy Pool Frechet: 365/500\n",
-            "Cy Pool Frechet: 370/500\n",
-            "Cy Pool Frechet: 375/500\n",
-            "Cy Pool Frechet: 380/500\n",
-            "Cy Pool Frechet: 385/500\n",
-            "Cy Pool Frechet: 390/500\n",
-            "Cy Pool Frechet: 395/500\n",
-            "Cy Pool Frechet: 400/500\n",
-            "Cy Pool Frechet: 405/500\n",
-            "Cy Pool Frechet: 410/500\n",
-            "Cy Pool Frechet: 415/500\n",
-            "Cy Pool Frechet: 420/500\n",
-            "Cy Pool Frechet: 425/500\n",
-            "Cy Pool Frechet: 430/500\n",
-            "Cy Pool Frechet: 435/500\n",
-            "Cy Pool Frechet: 440/500\n",
-            "Cy Pool Frechet: 445/500\n",
-            "Cy Pool Frechet: 450/500\n",
-            "Cy Pool Frechet: 455/500\n",
-            "Cy Pool Frechet: 460/500\n",
-            "Cy Pool Frechet: 465/500\n",
-            "Cy Pool Frechet: 470/500\n",
-            "Cy Pool Frechet: 475/500\n",
-            "Cy Pool Frechet: 480/500\n",
-            "Cy Pool Frechet: 485/500\n",
-            "Cy Pool Frechet: 490/500\n",
-            "Cy Pool Frechet: 495/500\n"
+            "Cy Pool Frechet: 0/100\n",
+            "Cy Pool Frechet: 5/100\n",
+            "Cy Pool Frechet: 10/100\n",
+            "Cy Pool Frechet: 15/100\n",
+            "Cy Pool Frechet: 20/100\n",
+            "Cy Pool Frechet: 25/100\n",
+            "Cy Pool Frechet: 30/100\n",
+            "Cy Pool Frechet: 35/100\n",
+            "Cy Pool Frechet: 40/100\n",
+            "Cy Pool Frechet: 45/100\n",
+            "Cy Pool Frechet: 50/100\n",
+            "Cy Pool Frechet: 55/100\n",
+            "Cy Pool Frechet: 60/100\n",
+            "Cy Pool Frechet: 65/100\n",
+            "Cy Pool Frechet: 70/100\n",
+            "Cy Pool Frechet: 75/100\n",
+            "Cy Pool Frechet: 80/100\n",
+            "Cy Pool Frechet: 85/100\n",
+            "Cy Pool Frechet: 90/100\n",
+            "Cy Pool Frechet: 95/100\n"
           ]
         }
       ],
       "source": [
         "# Test set\n",
-        "generate_parallell_frechet_similarities(\n",
-        "    DATA_ROME,\n",
-        "    TEST_SET_ROME,\n",
-        "    FRECHET_FILENAME_TEST_ROME,\n",
-        "    SIMILARITIES_OUTPUT_FOLDER_ROME,\n",
-        ")\n",
+        "# generate_parallell_frechet_similarities(\n",
+        "#     DATA_ROME,\n",
+        "#     TEST_SET_ROME,\n",
+        "#     FRECHET_FILENAME_TEST_ROME,\n",
+        "#     SIMILARITIES_OUTPUT_FOLDER_ROME,\n",
+        "# )\n",
         "\n",
         "# Full set\n",
         "generate_parallell_frechet_similarities(\n",
@@ -261,127 +171,37 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Cy Pool Frechet: 0/50\n",
-            "Cy Pool Frechet: 5/50\n",
-            "Cy Pool Frechet: 10/50\n",
-            "Cy Pool Frechet: 15/50\n",
-            "Cy Pool Frechet: 20/50\n",
-            "Cy Pool Frechet: 25/50\n",
-            "Cy Pool Frechet: 30/50\n",
-            "Cy Pool Frechet: 35/50\n",
-            "Cy Pool Frechet: 40/50\n",
-            "Cy Pool Frechet: 45/50\n",
-            "Cy Pool Frechet: 0/500\n",
-            "Cy Pool Frechet: 5/500\n",
-            "Cy Pool Frechet: 10/500\n",
-            "Cy Pool Frechet: 15/500\n",
-            "Cy Pool Frechet: 20/500\n",
-            "Cy Pool Frechet: 25/500\n",
-            "Cy Pool Frechet: 30/500\n",
-            "Cy Pool Frechet: 35/500\n",
-            "Cy Pool Frechet: 40/500\n",
-            "Cy Pool Frechet: 45/500\n",
-            "Cy Pool Frechet: 50/500\n",
-            "Cy Pool Frechet: 55/500\n",
-            "Cy Pool Frechet: 60/500\n",
-            "Cy Pool Frechet: 65/500\n",
-            "Cy Pool Frechet: 70/500\n",
-            "Cy Pool Frechet: 75/500\n",
-            "Cy Pool Frechet: 80/500\n",
-            "Cy Pool Frechet: 85/500\n",
-            "Cy Pool Frechet: 90/500\n",
-            "Cy Pool Frechet: 95/500\n",
-            "Cy Pool Frechet: 100/500\n",
-            "Cy Pool Frechet: 105/500\n",
-            "Cy Pool Frechet: 110/500\n",
-            "Cy Pool Frechet: 115/500\n",
-            "Cy Pool Frechet: 120/500\n",
-            "Cy Pool Frechet: 125/500\n",
-            "Cy Pool Frechet: 130/500\n",
-            "Cy Pool Frechet: 135/500\n",
-            "Cy Pool Frechet: 140/500\n",
-            "Cy Pool Frechet: 145/500\n",
-            "Cy Pool Frechet: 150/500\n",
-            "Cy Pool Frechet: 155/500\n",
-            "Cy Pool Frechet: 160/500\n",
-            "Cy Pool Frechet: 165/500\n",
-            "Cy Pool Frechet: 170/500\n",
-            "Cy Pool Frechet: 175/500\n",
-            "Cy Pool Frechet: 180/500\n",
-            "Cy Pool Frechet: 185/500\n",
-            "Cy Pool Frechet: 190/500\n",
-            "Cy Pool Frechet: 195/500\n",
-            "Cy Pool Frechet: 200/500\n",
-            "Cy Pool Frechet: 205/500\n",
-            "Cy Pool Frechet: 210/500\n",
-            "Cy Pool Frechet: 215/500\n",
-            "Cy Pool Frechet: 220/500\n",
-            "Cy Pool Frechet: 225/500\n",
-            "Cy Pool Frechet: 230/500\n",
-            "Cy Pool Frechet: 235/500\n",
-            "Cy Pool Frechet: 240/500\n",
-            "Cy Pool Frechet: 245/500\n",
-            "Cy Pool Frechet: 250/500\n",
-            "Cy Pool Frechet: 255/500\n",
-            "Cy Pool Frechet: 260/500\n",
-            "Cy Pool Frechet: 265/500\n",
-            "Cy Pool Frechet: 270/500\n",
-            "Cy Pool Frechet: 275/500\n",
-            "Cy Pool Frechet: 280/500\n",
-            "Cy Pool Frechet: 285/500\n",
-            "Cy Pool Frechet: 290/500\n",
-            "Cy Pool Frechet: 295/500\n",
-            "Cy Pool Frechet: 300/500\n",
-            "Cy Pool Frechet: 305/500\n",
-            "Cy Pool Frechet: 310/500\n",
-            "Cy Pool Frechet: 315/500\n",
-            "Cy Pool Frechet: 320/500\n",
-            "Cy Pool Frechet: 325/500\n",
-            "Cy Pool Frechet: 330/500\n",
-            "Cy Pool Frechet: 335/500\n",
-            "Cy Pool Frechet: 340/500\n",
-            "Cy Pool Frechet: 345/500\n",
-            "Cy Pool Frechet: 350/500\n",
-            "Cy Pool Frechet: 355/500\n",
-            "Cy Pool Frechet: 360/500\n",
-            "Cy Pool Frechet: 365/500\n",
-            "Cy Pool Frechet: 370/500\n",
-            "Cy Pool Frechet: 375/500\n",
-            "Cy Pool Frechet: 380/500\n",
-            "Cy Pool Frechet: 385/500\n",
-            "Cy Pool Frechet: 390/500\n",
-            "Cy Pool Frechet: 395/500\n",
-            "Cy Pool Frechet: 400/500\n",
-            "Cy Pool Frechet: 405/500\n",
-            "Cy Pool Frechet: 410/500\n",
-            "Cy Pool Frechet: 415/500\n",
-            "Cy Pool Frechet: 420/500\n",
-            "Cy Pool Frechet: 425/500\n",
-            "Cy Pool Frechet: 430/500\n",
-            "Cy Pool Frechet: 435/500\n",
-            "Cy Pool Frechet: 440/500\n",
-            "Cy Pool Frechet: 445/500\n",
-            "Cy Pool Frechet: 450/500\n",
-            "Cy Pool Frechet: 455/500\n",
-            "Cy Pool Frechet: 460/500\n",
-            "Cy Pool Frechet: 465/500\n",
-            "Cy Pool Frechet: 470/500\n",
-            "Cy Pool Frechet: 475/500\n",
-            "Cy Pool Frechet: 480/500\n",
-            "Cy Pool Frechet: 485/500\n",
-            "Cy Pool Frechet: 490/500\n",
-            "Cy Pool Frechet: 495/500\n"
+            "Cy Pool Frechet: 0/100\n",
+            "Cy Pool Frechet: 5/100\n",
+            "Cy Pool Frechet: 10/100\n",
+            "Cy Pool Frechet: 15/100\n",
+            "Cy Pool Frechet: 20/100\n",
+            "Cy Pool Frechet: 25/100\n",
+            "Cy Pool Frechet: 30/100\n",
+            "Cy Pool Frechet: 35/100\n",
+            "Cy Pool Frechet: 40/100\n",
+            "Cy Pool Frechet: 45/100\n",
+            "Cy Pool Frechet: 50/100\n",
+            "Cy Pool Frechet: 55/100\n",
+            "Cy Pool Frechet: 60/100\n",
+            "Cy Pool Frechet: 65/100\n",
+            "Cy Pool Frechet: 70/100\n",
+            "Cy Pool Frechet: 75/100\n",
+            "Cy Pool Frechet: 80/100\n",
+            "Cy Pool Frechet: 85/100\n",
+            "Cy Pool Frechet: 90/100\n",
+            "Cy Pool Frechet: 95/100\n"
           ]
         }
       ],
       "source": [
         "# Test set\n",
-        "generate_parallell_frechet_similarities(\n",
-        "    DATA_PORTO,\n",
-        "    TEST_SET_PORTO,\n",
-        "    FRECHET_FILENAME_TEST_PORTO,\n",
-        "    SIMILARITIES_OUTPUT_FOLDER_PORTO,\n",
-        ")\n",
+        "# generate_parallell_frechet_similarities(\n",
+        "#     DATA_PORTO,\n",
+        "#     TEST_SET_PORTO,\n",
+        "#     FRECHET_FILENAME_TEST_PORTO,\n",
+        "#     SIMILARITIES_OUTPUT_FOLDER_PORTO,\n",
+        "# )\n",
         "\n",
         "# Full set\n",
         "generate_parallell_frechet_similarities(\n",
@@ -405,129 +225,39 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Cy Pool Frechet: 0/50\n",
-            "Cy Pool Frechet: 5/50\n",
-            "Cy Pool Frechet: 10/50\n",
-            "Cy Pool Frechet: 15/50\n",
-            "Cy Pool Frechet: 20/50\n",
-            "Cy Pool Frechet: 25/50\n",
-            "Cy Pool Frechet: 30/50\n",
-            "Cy Pool Frechet: 35/50\n",
-            "Cy Pool Frechet: 40/50\n",
-            "Cy Pool Frechet: 45/50\n",
-            "Cy Pool Frechet: 0/500\n",
-            "Cy Pool Frechet: 5/500\n",
-            "Cy Pool Frechet: 10/500\n",
-            "Cy Pool Frechet: 15/500\n",
-            "Cy Pool Frechet: 20/500\n",
-            "Cy Pool Frechet: 25/500\n",
-            "Cy Pool Frechet: 30/500\n",
-            "Cy Pool Frechet: 35/500\n",
-            "Cy Pool Frechet: 40/500\n",
-            "Cy Pool Frechet: 45/500\n",
-            "Cy Pool Frechet: 50/500\n",
-            "Cy Pool Frechet: 55/500\n",
-            "Cy Pool Frechet: 60/500\n",
-            "Cy Pool Frechet: 65/500\n",
-            "Cy Pool Frechet: 70/500\n",
-            "Cy Pool Frechet: 75/500\n",
-            "Cy Pool Frechet: 80/500\n",
-            "Cy Pool Frechet: 85/500\n",
-            "Cy Pool Frechet: 90/500\n",
-            "Cy Pool Frechet: 95/500\n",
-            "Cy Pool Frechet: 100/500\n",
-            "Cy Pool Frechet: 105/500\n",
-            "Cy Pool Frechet: 110/500\n",
-            "Cy Pool Frechet: 115/500\n",
-            "Cy Pool Frechet: 120/500\n",
-            "Cy Pool Frechet: 125/500\n",
-            "Cy Pool Frechet: 130/500\n",
-            "Cy Pool Frechet: 135/500\n",
-            "Cy Pool Frechet: 140/500\n",
-            "Cy Pool Frechet: 145/500\n",
-            "Cy Pool Frechet: 150/500\n",
-            "Cy Pool Frechet: 155/500\n",
-            "Cy Pool Frechet: 160/500\n",
-            "Cy Pool Frechet: 165/500\n",
-            "Cy Pool Frechet: 170/500\n",
-            "Cy Pool Frechet: 175/500\n",
-            "Cy Pool Frechet: 180/500\n",
-            "Cy Pool Frechet: 185/500\n",
-            "Cy Pool Frechet: 190/500\n",
-            "Cy Pool Frechet: 195/500\n",
-            "Cy Pool Frechet: 200/500\n",
-            "Cy Pool Frechet: 205/500\n",
-            "Cy Pool Frechet: 210/500\n",
-            "Cy Pool Frechet: 215/500\n",
-            "Cy Pool Frechet: 220/500\n",
-            "Cy Pool Frechet: 225/500\n",
-            "Cy Pool Frechet: 230/500\n",
-            "Cy Pool Frechet: 235/500\n",
-            "Cy Pool Frechet: 240/500\n",
-            "Cy Pool Frechet: 245/500\n",
-            "Cy Pool Frechet: 250/500\n",
-            "Cy Pool Frechet: 255/500\n",
-            "Cy Pool Frechet: 260/500\n",
-            "Cy Pool Frechet: 265/500\n",
-            "Cy Pool Frechet: 270/500\n",
-            "Cy Pool Frechet: 275/500\n",
-            "Cy Pool Frechet: 280/500\n",
-            "Cy Pool Frechet: 285/500\n",
-            "Cy Pool Frechet: 290/500\n",
-            "Cy Pool Frechet: 295/500\n",
-            "Cy Pool Frechet: 300/500\n",
-            "Cy Pool Frechet: 305/500\n",
-            "Cy Pool Frechet: 310/500\n",
-            "Cy Pool Frechet: 315/500\n",
-            "Cy Pool Frechet: 320/500\n",
-            "Cy Pool Frechet: 325/500\n",
-            "Cy Pool Frechet: 330/500\n",
-            "Cy Pool Frechet: 335/500\n",
-            "Cy Pool Frechet: 340/500\n",
-            "Cy Pool Frechet: 345/500\n",
-            "Cy Pool Frechet: 350/500\n",
-            "Cy Pool Frechet: 355/500\n",
-            "Cy Pool Frechet: 360/500\n",
-            "Cy Pool Frechet: 365/500\n",
-            "Cy Pool Frechet: 370/500\n",
-            "Cy Pool Frechet: 375/500\n",
-            "Cy Pool Frechet: 380/500\n",
-            "Cy Pool Frechet: 385/500\n",
-            "Cy Pool Frechet: 390/500\n",
-            "Cy Pool Frechet: 395/500\n",
-            "Cy Pool Frechet: 400/500\n",
-            "Cy Pool Frechet: 405/500\n",
-            "Cy Pool Frechet: 410/500\n",
-            "Cy Pool Frechet: 415/500\n",
-            "Cy Pool Frechet: 420/500\n",
-            "Cy Pool Frechet: 425/500\n",
-            "Cy Pool Frechet: 430/500\n",
-            "Cy Pool Frechet: 435/500\n",
-            "Cy Pool Frechet: 440/500\n",
-            "Cy Pool Frechet: 445/500\n",
-            "Cy Pool Frechet: 450/500\n",
-            "Cy Pool Frechet: 455/500\n",
-            "Cy Pool Frechet: 460/500\n",
-            "Cy Pool Frechet: 465/500\n",
-            "Cy Pool Frechet: 470/500\n",
-            "Cy Pool Frechet: 475/500\n",
-            "Cy Pool Frechet: 480/500\n",
-            "Cy Pool Frechet: 485/500\n",
-            "Cy Pool Frechet: 490/500\n",
-            "Cy Pool Frechet: 495/500\n"
+            "Cy Pool Frechet: 0/100\n",
+            "Cy Pool Frechet: 5/100\n",
+            "Cy Pool Frechet: 10/100\n",
+            "Cy Pool Frechet: 15/100\n",
+            "Cy Pool Frechet: 20/100\n",
+            "Cy Pool Frechet: 25/100\n",
+            "Cy Pool Frechet: 30/100\n",
+            "Cy Pool Frechet: 35/100\n",
+            "Cy Pool Frechet: 40/100\n",
+            "Cy Pool Frechet: 45/100\n",
+            "Cy Pool Frechet: 50/100\n",
+            "Cy Pool Frechet: 55/100\n",
+            "Cy Pool Frechet: 60/100\n",
+            "Cy Pool Frechet: 65/100\n",
+            "Cy Pool Frechet: 70/100\n",
+            "Cy Pool Frechet: 75/100\n",
+            "Cy Pool Frechet: 80/100\n",
+            "Cy Pool Frechet: 85/100\n",
+            "Cy Pool Frechet: 90/100\n",
+            "Cy Pool Frechet: 95/100\n"
           ]
         }
       ],
       "source": [
         "# NOTE - Not computed for frechet test set or full set due to extensive computation time\n",
         "# Test set\n",
-        "generate_parallell_frechet_similarities(\n",
-        "    DATA_KOLUMBUS,\n",
-        "    TEST_SET_KOLUMBUS,\n",
-        "    FRECHET_FILENAME_TEST_KOLUMBUS,\n",
-        "    SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS,\n",
-        ")\n",
-        "# # Full set\n",
+        "# generate_parallell_frechet_similarities(\n",
+        "#     DATA_KOLUMBUS,\n",
+        "#     TEST_SET_KOLUMBUS,\n",
+        "#     FRECHET_FILENAME_TEST_KOLUMBUS,\n",
+        "#     SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS,\n",
+        "# )\n",
+        "# Full set\n",
         "generate_parallell_frechet_similarities(\n",
         "    DATA_KOLUMBUS, FULL_SET_KOLUMBUS, FRECHET_FILENAME_KOLUMBUS, SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS\n",
         ")"
