--- a/benchmarks/measure_true_sim_runtimes.ipynb
+++ b/benchmarks/measure_true_sim_runtimes.ipynb
@@ -38,46 +38,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data_end_size 3000\n",
-      "data sets range(250, 3001, 250)\n",
-      "Computing true_dtw_cy for kolumbus with 10 jobs\n",
-      "            250        500        750        1000        1250        1500  \\\n",
-      "run_1   5.117376  21.304009  45.993515  83.479477  127.195491  181.132152   \n",
-      "run_2   5.066314  22.399566  45.925716  83.550316  127.230902  180.843777   \n",
-      "run_3   5.123922  22.611349  45.819348  83.449952  127.571219  191.206670   \n",
-      "run_4   5.108350  21.397627  45.974441  83.584425  127.096075  181.167729   \n",
-      "run_5   5.153986  22.546510  45.990352  87.906361  127.132231  181.193331   \n",
-      "run_6   5.104957  21.305926  48.400604  83.410864  133.702877  181.329876   \n",
-      "run_7   5.126922  22.478976  46.190069  83.216085  134.032850  180.795055   \n",
-      "run_8   5.108281  21.508028  45.876811  87.649334  127.011445  181.090596   \n",
-      "run_9   5.336037  21.371079  45.960385  87.841220  126.958888  181.140834   \n",
-      "run_10  5.410424  21.336274  48.707830  87.626811  126.625480  181.732358   \n",
+      "data_end_size 200\n",
+      "data sets range(100, 201, 100)\n",
+      "Computing true_dtw_cy for porto with 8 jobs\n",
+      "Iteration 1/3\n",
+      "Iteration 2/3e 200, set 2/2\n",
+      "Iteration 3/3e 200, set 2/2\n",
+      "Computing size 200, set 2/2\n",
+      "Runtimes - Iteration 1:\n",
+      "            100       200\n",
+      "run_1  0.854544  3.873246\n",
+      "run_2  0.869355  3.860709\n",
+      "run_3  0.812799  3.847481\n",
+      "run_4  0.872511  3.884966\n",
+      "run_5  0.870029  3.880728\n",
+      "run_6  0.859975  3.868305\n",
+      "run_7  0.820153  3.944998\n",
+      "run_8  0.867298  3.873403\n",
       "\n",
-      "              1750        2000        2250        2500        2750        3000  \n",
-      "run_1   261.083471  327.947080  420.966149  520.757767  632.586596  798.356958  \n",
-      "run_2   247.251565  326.801161  420.366075  520.212684  665.995836  749.737983  \n",
-      "run_3   246.965810  327.079872  420.423198  521.035503  632.319817  750.923955  \n",
-      "run_4   260.721329  326.645023  419.107034  549.169085  633.201031  750.866494  \n",
-      "run_5   260.272296  327.004468  420.222538  520.858113  665.570717  750.590861  \n",
-      "run_6   247.504778  327.304625  420.879539  523.051189  665.931272  750.371602  \n",
-      "run_7   247.287637  327.190921  420.193699  521.150773  634.271224  750.669665  \n",
-      "run_8   260.476112  327.992081  443.696899  520.546126  633.256176  750.608372  \n",
-      "run_9   247.048359  345.303805  419.929924  549.344096  633.499334  752.459288  \n",
-      "run_10  260.187700  327.281848  420.792059  520.265144  665.039327  749.753155  \n"
+      "Runtimes - Iteration 2:\n",
+      "            100       200\n",
+      "run_1  0.800300  3.869619\n",
+      "run_2  0.859391  3.872325\n",
+      "run_3  1.037952  3.603009\n",
+      "run_4  0.863382  3.831490\n",
+      "run_5  0.853587  3.841462\n",
+      "run_6  1.184185  3.841156\n",
+      "run_7  0.862637  3.834071\n",
+      "run_8  0.860152  3.980898\n",
+      "\n",
+      "Runtimes - Iteration 3:\n",
+      "            100       200\n",
+      "run_1  0.802936  3.819587\n",
+      "run_2  0.857317  3.841246\n",
+      "run_3  0.871585  4.022801\n",
+      "run_4  0.859860  3.812497\n",
+      "run_5  0.857858  3.844968\n",
+      "run_6  0.861878  3.815113\n",
+      "run_7  0.826292  3.820610\n",
+      "run_8  1.125396  4.068875\n",
+      "\n",
+      "Average Runtimes:\n",
+      "            100       200\n",
+      "run_1  0.819260  3.854151\n",
+      "run_2  0.862021  3.858093\n",
+      "run_3  0.907445  3.824430\n",
+      "run_4  0.865251  3.842984\n",
+      "run_5  0.860491  3.855719\n",
+      "run_6  0.968679  3.841525\n",
+      "run_7  0.836361  3.866560\n",
+      "run_8  0.950949  3.974392\n"
      ]
     }
    ],
    "source": [
     "# Measuring the computation times of true similarities\n",
     "\n",
-    "measure=\"true_dtw_cy\"\n",
-    "city=\"kolumbus\"\n",
-    "parallel_jobs = 10\n",
-    "data_start_size = 250\n",
-    "data_end_size = 3000\n",
-    "data_step_size = 250\n",
+    "measure=\"true_dtw_py\"\n",
+    "city=\"porto\"\n",
+    "parallel_jobs = 8\n",
+    "data_start_size = 100\n",
+    "data_end_size = 1000\n",
+    "data_step_size = 100\n",
+    "iterations = 3\n",
     "\n",
-    "compute_true_similarity_runtimes(measure=measure, city=city, parallel_jobs=parallel_jobs, data_start_size=data_start_size, data_end_size=data_end_size, data_step_size=data_step_size)"
+    "compute_true_similarity_runtimes(measure=measure, city=city, parallel_jobs=parallel_jobs, data_start_size=data_start_size, data_end_size=data_end_size, data_step_size=data_step_size, iterations=iterations)"
    ]
   },
   {
@@ -97,7 +122,7 @@
     "\n",
     "measure=\"true_frechet_cy\"\n",
     "city=\"porto\"\n",
-    "parallel_jobs = 10\n",
+    "parallel_jobs = 8\n",
     "data_start_size = 100\n",
     "data_end_size = 200 + 1\n",
     "data_step_size = 100\n",
