--- a/processing/kol_clean_data.ipynb
+++ b/processing/kol_clean_data.ipynb
@@ -28,7 +28,7 @@
     "LOG = False  # Set to true for printing/debug during data extraction\n",
     "\n",
     "OUTPUT_FOLDER = f\"../{KOLUMBUS_OUTPUT_FOLDER}\"\n",
-    "RAW_DATA_FILE = \"../dataset/kolumbus/combined.csv\"\n",
+    "RAW_DATA_FILE = \"../dataset/kolumbus/2023-09-04.csv\"\n",
     "\n",
     "NUMBER_OF_TRACES = 3000\n",
     "MAX_TIME_DIFF_SECONDS = (\n",
@@ -45,8 +45,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total unique trips before boundaries:  5399\n",
-      "Total unique trips after boundaries:  3894\n"
+      "Total unique trips before boundaries:  5194\n",
+      "Total unique trips after boundaries:  4022\n"
      ]
     }
    ],
@@ -60,14 +60,6 @@
     "\n",
     "print(\"Total unique trips before boundaries: \", raw_df[\"serviceJourney\"].nunique())\n",
     "\n",
-    "#TODO - Decide on coordinates to use for kolumbus\n",
-    "# Filtering the data\n",
-    "# filtered_df = raw_df[\n",
-    "#     (raw_df[\"latitude\"] >= 58.71)\n",
-    "#     & (raw_df[\"latitude\"] <= 59.02)\n",
-    "#     & (raw_df[\"longitude\"] >= 5.53)\n",
-    "#     & (raw_df[\"longitude\"] <= 5.85)\n",
-    "# ]\n",
     "filtered_df = raw_df[\n",
     "    (raw_df[\"latitude\"] >= K_MIN_LAT)\n",
     "    & (raw_df[\"latitude\"] <= K_MAX_LAT)\n",
@@ -100,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipped trajectories: 459\n"
+      "Skipped trajectories: 11\n"
      ]
     }
    ],
@@ -152,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"K_\", number=50, create_test_set=True)"
+    "create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"K_\", number=50, create_test_set=True)"
    ]
   }
  ],
@@ -176,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
