avg points per trajectory

--- a/processing/porto_clean_data.ipynb
+++ b/processing/porto_clean_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,6 +206,43 @@
    "outputs": [],
    "source": [
     "# create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"P_\", number=50, create_test_set=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average number of points per trajectory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55.04633901705115\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_lines = 0\n",
+    "file_count = 0\n",
+    "\n",
+    "for root, dirs, files in os.walk(OUTPUT_FOLDER):\n",
+    "    for file in files:\n",
+    "        try:\n",
+    "            with open(os.path.join(root, file), 'r') as f:\n",
+    "                total_lines += sum(1 for line in f)\n",
+    "                file_count += 1\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error reading {file}: {e}\")\n",
+    "\n",
+    "if file_count > 0:\n",
+    "    print(total_lines / file_count)"
    ]
   }
  ],
