--- a/processing/kol_clean_data.ipynb
+++ b/processing/kol_clean_data.ipynb
@@ -150,6 +150,43 @@
    "source": [
     "create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"K_\", number=50, create_test_set=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average number of points per trajectory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150.3513097072419\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_lines = 0\n",
+    "file_count = 0\n",
+    "\n",
+    "for root, dirs, files in os.walk(OUTPUT_FOLDER):\n",
+    "    for file in files:\n",
+    "        try:\n",
+    "            with open(os.path.join(root, file), 'r') as f:\n",
+    "                total_lines += sum(1 for line in f)\n",
+    "                file_count += 1\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error reading {file}: {e}\")\n",
+    "\n",
+    "if file_count > 0:\n",
+    "    print(total_lines / file_count)"
+   ]
   }
  ],
  "metadata": {
@@ -168,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6+"
   }
  },
  "nbformat": 4,
