test low sample rate rome and frechet kolumbus experiments

--- a/benchmarks/measure_true_sim_runtimes.ipynb
+++ b/benchmarks/measure_true_sim_runtimes.ipynb
@@ -94,8 +94,8 @@
    "source": [
     "# Measuring the computation times of true similarities\n",
     "\n",
-    "measure=\"true_dtw_py\"\n",
-    "city=\"porto\"\n",
+    "measure=\"true_dtw_cy\"\n",
+    "city=\"rome\"\n",
     "parallel_jobs = 8\n",
     "data_start_size = 100\n",
     "data_end_size = 1000\n",
