--- a/benchmarks/similarities_runtimes/find_avg_runtime.ipynb
+++ b/benchmarks/similarities_runtimes/find_avg_runtime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -10,16 +10,16 @@
      "output_type": "stream",
      "text": [
       "Average runtime for each dataset size:\n",
-      "100: 0.13207254166666663\n",
-      "200: 0.3521070416666666\n",
-      "300: 0.6683898333333333\n",
-      "400: 1.1773804166666666\n",
-      "500: 1.85296675\n",
-      "600: 2.7032980833333333\n",
-      "700: 3.7643433333333336\n",
-      "800: 4.737689\n",
-      "900: 6.076730583333333\n",
-      "1000: 7.404909875\n"
+      "100: 0.11127908333333333\n",
+      "200: 0.30892125\n",
+      "300: 0.6077361666666666\n",
+      "400: 1.1167999583333335\n",
+      "500: 1.7223989166666667\n",
+      "600: 2.415092583333333\n",
+      "700: 3.20803025\n",
+      "800: 4.174735291666667\n",
+      "900: 5.346983375\n",
+      "1000: 6.511444083333334\n"
      ]
     }
    ],
@@ -28,7 +28,8 @@
     "\n",
     "\n",
     "# Replace 'your_file.csv' with the path to your actual CSV file\n",
-    "csv_file_path = 'similarity_runtimes_grid_dtw_cy_layers-5_res-1.6_porto_start-100_end-1000_step-100.csv'\n",
+    "csv_file_path = 'similarity_runtimes_true_dtw_cy_porto_start-100_end-1000_step-100.csv'\n",
+    "# csv_file_path = 'similarity_runtimes_grid_dtw_cy_layers-4_res-1.8_rome_start-100_end-1000_step-100.csv'\n",
     "\n",
     "# Reading the CSV file\n",
     "df = pd.read_csv(csv_file_path, index_col=0)\n",
