--- a/hashed_similarities/measure_hashed_sim_runtimes.ipynb
+++ b/hashed_similarities/measure_hashed_sim_runtimes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +38,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1/3\n",
+      "Computing grid_dtw_cy for rome with 8 jobs - Iteration 1/3\n",
+      "Iteration 2/3e 1000, set 10/10\n",
+      "Computing grid_dtw_cy for rome with 8 jobs - Iteration 2/3\n",
+      "Iteration 3/3e 1000, set 10/10\n",
+      "Computing grid_dtw_cy for rome with 8 jobs - Iteration 3/3\n",
+      "Computing size 1000, set 10/10\n",
+      "Runtimes - Iteration 1:\n",
+      "           100       200       300       400       500       600       700   \\\n",
+      "run_1  0.062524  0.252516  0.522951  0.958401  1.423791  2.166230  2.884594   \n",
+      "run_2  0.147796  0.251861  0.574364  0.950891  1.463380  2.099745  2.878776   \n",
+      "run_3  0.057828  0.240344  0.546805  0.998797  1.462530  2.179519  2.873132   \n",
+      "run_4  0.248201  0.243319  0.524181  0.930552  1.513111  2.177089  2.902773   \n",
+      "run_5  0.068088  0.254236  0.538826  0.969116  1.455701  2.186812  2.870971   \n",
+      "run_6  0.061089  0.238432  0.526424  0.949687  1.469837  2.174555  2.865401   \n",
+      "run_7  0.057837  0.242484  0.604581  0.928139  1.451444  2.146564  2.981996   \n",
+      "run_8  0.122806  0.233187  0.534022  0.941707  1.465734  2.353918  2.813644   \n",
+      "\n",
+      "           800       900       1000  \n",
+      "run_1  3.735297  4.630791  6.218220  \n",
+      "run_2  3.931046  4.625753  5.772570  \n",
+      "run_3  3.704703  4.536434  5.772292  \n",
+      "run_4  3.704990  4.690926  5.805598  \n",
+      "run_5  3.704270  4.654555  5.747093  \n",
+      "run_6  3.704101  4.771712  5.750364  \n",
+      "run_7  4.238628  4.642073  5.757467  \n",
+      "run_8  3.722545  4.632750  5.760778  \n",
+      "\n",
+      "Runtimes - Iteration 2:\n",
+      "           100       200       300       400       500       600       700   \\\n",
+      "run_1  0.057536  0.227858  0.531727  0.930393  1.454570  2.037774  2.742980   \n",
+      "run_2  0.057231  0.239244  0.518230  0.904388  2.218492  2.037643  2.909366   \n",
+      "run_3  0.067031  0.233624  0.515960  0.925608  1.442558  2.026082  2.754798   \n",
+      "run_4  0.062825  0.228358  0.540707  0.909312  1.443285  2.052958  2.831094   \n",
+      "run_5  0.302582  0.229929  0.525253  0.921329  1.495273  2.057209  2.827005   \n",
+      "run_6  0.058167  0.272861  1.163733  0.915682  1.437173  2.196921  2.753886   \n",
+      "run_7  0.056174  0.228835  0.511562  0.913436  1.438145  2.030136  2.815996   \n",
+      "run_8  0.179687  0.227647  0.527005  1.054818  1.823489  2.055714  2.835083   \n",
+      "\n",
+      "           800       900       1000  \n",
+      "run_1  3.683203  4.740829  5.730691  \n",
+      "run_2  3.783126  4.715438  5.712080  \n",
+      "run_3  4.134219  4.639729  5.591692  \n",
+      "run_4  3.776032  4.760348  5.755490  \n",
+      "run_5  3.774806  4.708295  5.726192  \n",
+      "run_6  3.772594  4.724039  5.689165  \n",
+      "run_7  3.677691  5.011585  5.823065  \n",
+      "run_8  3.723903  4.810462  5.597300  \n",
+      "\n",
+      "Runtimes - Iteration 3:\n",
+      "           100       200       300       400       500       600       700   \\\n",
+      "run_1  0.057625  0.244197  0.521906  0.978165  1.468401  2.058985  2.905512   \n",
+      "run_2  0.064077  0.242723  0.527107  0.922463  1.460832  2.073370  3.149996   \n",
+      "run_3  0.058380  0.246630  1.328697  0.905643  1.466840  2.022696  2.925740   \n",
+      "run_4  0.064408  0.374188  0.530207  0.910616  1.503170  2.263570  2.923663   \n",
+      "run_5  0.056239  0.243378  0.531580  0.896632  1.695348  2.060894  2.945465   \n",
+      "run_6  0.544732  0.241754  0.528709  0.898434  1.712197  2.063801  3.324990   \n",
+      "run_7  0.059977  0.242275  0.520535  0.905229  1.452878  2.093848  2.979637   \n",
+      "run_8  0.071557  0.340150  0.527835  0.917640  1.452128  2.053555  2.930172   \n",
+      "\n",
+      "           800       900       1000  \n",
+      "run_1  3.637968  4.695444  5.779201  \n",
+      "run_2  3.658892  4.712561  5.797372  \n",
+      "run_3  3.601964  4.662179  5.747180  \n",
+      "run_4  3.686295  4.745308  5.756161  \n",
+      "run_5  3.660803  4.994592  5.785926  \n",
+      "run_6  3.657847  4.616100  5.803594  \n",
+      "run_7  3.685744  4.770089  5.849579  \n",
+      "run_8  4.038114  4.634374  5.799251  \n",
+      "\n",
+      "Average Runtimes:\n",
+      "           100       200       300       400       500       600       700   \\\n",
+      "run_1  0.059228  0.241524  0.525528  0.955653  1.448921  2.087663  2.844362   \n",
+      "run_2  0.089701  0.244609  0.539900  0.925914  1.714235  2.070253  2.979379   \n",
+      "run_3  0.061080  0.240199  0.797154  0.943349  1.457309  2.076099  2.851223   \n",
+      "run_4  0.125145  0.281955  0.531698  0.916827  1.486522  2.164539  2.885843   \n",
+      "run_5  0.142303  0.242514  0.531886  0.929026  1.548774  2.101638  2.881147   \n",
+      "run_6  0.221329  0.251016  0.739622  0.921268  1.539736  2.145092  2.981426   \n",
+      "run_7  0.057996  0.237865  0.545559  0.915601  1.447489  2.090183  2.925876   \n",
+      "run_8  0.124683  0.266995  0.529621  0.971388  1.580450  2.154396  2.859633   \n",
+      "\n",
+      "           800       900       1000  \n",
+      "run_1  3.685489  4.689021  5.909371  \n",
+      "run_2  3.791021  4.684584  5.760674  \n",
+      "run_3  3.813629  4.612781  5.703721  \n",
+      "run_4  3.722439  4.732194  5.772416  \n",
+      "run_5  3.713293  4.785814  5.753070  \n",
+      "run_6  3.711514  4.703950  5.747708  \n",
+      "run_7  3.867354  4.807916  5.810037  \n",
+      "run_8  3.828187  4.692529  5.719110  \n"
+     ]
+    }
+   ],
    "source": [
     "# Measuring the computation times of true similarities\n",
     "\n",
     "measure=\"grid_dtw_cy\"\n",
-    "city=\"porto\"\n",
-    "res=1.6\n",
-    "layers=5\n",
+    "city=\"rome\"\n",
+    "res=1.8\n",
+    "layers=4\n",
     "parallel_jobs = 8\n",
     "data_start_size = 100\n",
     "data_end_size = 1000\n",
@@ -73,125 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 1/3\n",
-      "Computing disk_dtw_py for porto with 8 jobs - Iteration 1/3\n",
-      "Computing size 100, set 1/10\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 2/3e 1000, set 10/10\n",
-      "Computing disk_dtw_py for porto with 8 jobs - Iteration 2/3\n",
-      "Iteration 3/3e 1000, set 10/10\n",
-      "Computing disk_dtw_py for porto with 8 jobs - Iteration 3/3\n",
-      "Computing size 1000, set 10/10\n",
-      "Runtimes - Iteration 1:\n",
-      "           100        200        300        400         500         600   \\\n",
-      "run_1  7.038324  24.201756  61.722004  87.295388  163.321839  214.991799   \n",
-      "run_2  7.058454  24.231026  62.621074  87.594069  163.512625  213.462067   \n",
-      "run_3  7.119111  24.193197  62.343040  87.581619  163.023094  215.369786   \n",
-      "run_4  7.087453  23.998858  61.589353  87.926492  163.457832  215.866516   \n",
-      "run_5  7.083727  24.372450  61.807905  88.995026  164.432471  213.409759   \n",
-      "run_6  7.503392  24.111915  61.954252  88.022865  166.403308  213.595729   \n",
-      "run_7  7.072404  24.331871  62.312953  87.696669  163.726075  215.056733   \n",
-      "run_8  7.054998  24.978085  62.248784  87.682278  163.927925  215.210426   \n",
-      "\n",
-      "             700         800         900         1000  \n",
-      "run_1  328.470963  433.118428  579.909626  673.591303  \n",
-      "run_2  328.233368  427.040845  577.279742  677.858106  \n",
-      "run_3  330.569471  425.259795  585.600601  672.434251  \n",
-      "run_4  333.182895  425.606099  579.198676  675.073264  \n",
-      "run_5  331.335208  425.481912  583.270070  675.312400  \n",
-      "run_6  331.634251  426.471102  590.203958  674.933308  \n",
-      "run_7  331.292214  425.676381  581.999351  671.813038  \n",
-      "run_8  333.504473  424.733059  576.845399  676.775583  \n",
-      "\n",
-      "Runtimes - Iteration 2:\n",
-      "           100        200        300        400         500         600   \\\n",
-      "run_1  7.592690  24.773350  79.161814  77.290155  221.973671  184.366177   \n",
-      "run_2  7.579623  24.343888  78.947042  76.813226  223.754482  183.173731   \n",
-      "run_3  7.596046  24.343567  79.806920  77.450359  223.426960  185.147000   \n",
-      "run_4  7.578934  24.379013  78.942732  76.928057  221.598648  183.562634   \n",
-      "run_5  7.623657  24.335823  79.809304  77.109836  223.087974  183.294910   \n",
-      "run_6  7.605791  24.353727  79.309821  76.782077  224.654029  185.932707   \n",
-      "run_7  7.925151  25.001818  79.005907  77.340841  222.560524  184.626139   \n",
-      "run_8  7.552098  24.196713  79.099996  76.526352  222.226018  184.595164   \n",
-      "\n",
-      "             700         800         900         1000  \n",
-      "run_1  330.877370  418.701275  904.842312  553.902006  \n",
-      "run_2  332.970944  418.323898  903.753057  561.517659  \n",
-      "run_3  332.118175  420.000576  910.626964  552.139596  \n",
-      "run_4  333.398365  417.690332  903.072429  557.998247  \n",
-      "run_5  331.440090  417.382479  907.224809  552.771428  \n",
-      "run_6  332.506743  417.246000  904.528366  559.008238  \n",
-      "run_7  330.115134  419.311038  910.077291  558.285508  \n",
-      "run_8  330.179427  416.017015  906.714923  554.112918  \n",
-      "\n",
-      "Runtimes - Iteration 3:\n",
-      "           100        200        300        400         500         600   \\\n",
-      "run_1  6.657441  24.501969  51.902876  96.278058  149.198426  207.068291   \n",
-      "run_2  6.831426  24.520181  52.147497  95.633540  148.434652  207.301546   \n",
-      "run_3  6.550172  24.442960  52.694003  97.029468  147.076306  208.396810   \n",
-      "run_4  6.560565  24.358436  51.793829  95.143006  147.283495  208.836751   \n",
-      "run_5  6.595292  24.562095  51.561324  96.152798  148.224594  208.120013   \n",
-      "run_6  6.595514  24.251954  52.004358  95.522789  149.785188  208.323028   \n",
-      "run_7  7.235674  24.712501  52.444035  95.530584  148.443174  210.188507   \n",
-      "run_8  7.203454  24.271440  51.873822  95.729025  149.016928  207.784772   \n",
-      "\n",
-      "             700         800         900         1000  \n",
-      "run_1  275.461113  484.088461  784.378949  571.883744  \n",
-      "run_2  275.399708  484.025750  778.018475  568.044963  \n",
-      "run_3  272.706012  480.708181  781.352010  569.403242  \n",
-      "run_4  276.646661  483.586768  786.677204  571.111892  \n",
-      "run_5  273.794667  484.516210  786.297836  575.967524  \n",
-      "run_6  275.537838  483.810410  783.688020  569.821300  \n",
-      "run_7  274.554702  483.020351  786.768472  570.954340  \n",
-      "run_8  272.533521  483.033474  778.031525  569.008817  \n",
-      "\n",
-      "Average Hash Generation Times:\n",
-      "Size 100: 0.1521 seconds\n",
-      "Size 200: 0.2837 seconds\n",
-      "Size 300: 0.4459 seconds\n",
-      "Size 400: 0.5534 seconds\n",
-      "Size 500: 0.7051 seconds\n",
-      "Size 600: 0.8153 seconds\n",
-      "Size 700: 0.9728 seconds\n",
-      "Size 800: 1.1887 seconds\n",
-      "Size 900: 1.3709 seconds\n",
-      "Size 1000: 1.4550 seconds\n",
-      "\n",
-      "Average Runtimes:\n",
-      "           100        200        300        400         500         600   \\\n",
-      "run_1  7.096152  24.492358  64.262231  86.954534  178.164645  202.142089   \n",
-      "run_2  7.156501  24.365032  64.571871  86.680278  178.567253  201.312448   \n",
-      "run_3  7.088443  24.326575  64.947988  87.353815  177.842120  202.971199   \n",
-      "run_4  7.075651  24.245436  64.108638  86.665852  177.446658  202.755300   \n",
-      "run_5  7.100892  24.423456  64.392844  87.419220  178.581680  201.608227   \n",
-      "run_6  7.234899  24.239199  64.422810  86.775910  180.280842  202.617155   \n",
-      "run_7  7.411076  24.682063  64.587632  86.856031  178.243258  203.290460   \n",
-      "run_8  7.270183  24.482079  64.407534  86.645885  178.390290  202.530121   \n",
-      "\n",
-      "             700         800         900         1000  \n",
-      "run_1  311.603149  445.302721  756.376962  599.792351  \n",
-      "run_2  312.201340  443.130164  753.017091  602.473576  \n",
-      "run_3  311.797886  441.989517  759.193192  597.992363  \n",
-      "run_4  314.409307  442.294400  756.316103  601.394468  \n",
-      "run_5  312.189988  442.460200  758.930905  601.350451  \n",
-      "run_6  313.226277  442.509171  759.473448  601.254282  \n",
-      "run_7  311.987350  442.669257  759.615038  600.350962  \n",
-      "run_8  312.072474  441.261183  753.863949  599.965773  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Measuring the computation times of true similarities\n",
     "\n",
