print avg dtw and frechet, avoid including META files when calculating avg points in trajectories

--- a/processing/porto_clean_data.ipynb
+++ b/processing/porto_clean_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,10 @@
     "parentdir = os.path.dirname(currentdir)\n",
     "sys.path.append(parentdir)\n",
     "\n",
-    "from utils.helpers.metafile_handler import create_meta_files\n",
-    "from utils.helpers.save_trajectory import save_current_trajectory\n",
-    "from utils.helpers.alphabetical_number import increment_alphabetical\n",
     "from utils.helpers.file_handler import delete_old_files\n",
-    "\n",
+    "from utils.helpers.alphabetical_number import increment_alphabetical\n",
+    "from utils.helpers.save_trajectory import save_current_trajectory\n",
+    "from utils.helpers.metafile_handler import create_meta_files\n",
     "\n",
     "# Helper function to compute distance between a list of coordinates (Trajectory distance)\n",
     "# Haversine distance used\n",
@@ -52,11 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from constants import P_MAX_LAT, P_MAX_LON, P_MIN_LAT, P_MIN_LON, PORTO_OUTPUT_FOLDER\n",
+    "\n",
     "# Containning variables and constants for this spreadsheet\n",
     "SHOULD_DELETE_OLD_FILES = True\n",
     "\n",
@@ -142,7 +142,9 @@
     "        lon, lat = list(map(float, coordinate.split(\",\")))\n",
     "\n",
     "        # Outside bounded rectangle\n",
-    "        if (not (P_MIN_LAT <= lat <= P_MAX_LAT)) or (not (P_MIN_LON <= lon <= P_MAX_LON)):\n",
+    "        if (not (P_MIN_LAT <= lat <= P_MAX_LAT)) or (\n",
+    "            not (P_MIN_LON <= lon <= P_MAX_LON)\n",
+    "        ):\n",
     "            if LOG:\n",
     "                print(trace_id, \"is outside bounded rectangle\")\n",
     "            break\n",
@@ -205,26 +207,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"P_\", number=50, create_test_set=True)"
+    "# create_meta_files(\n",
+    "#     path_to_files=OUTPUT_FOLDER, data_prefix=\"P_\", number=50, create_test_set=True\n",
+    "# )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Average number of points per trajectory"
+    "## Average number of points per trajectory\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55.04633901705115\n"
+      "86.28398692810458\n"
      ]
     }
    ],
@@ -234,8 +238,10 @@
     "\n",
     "for root, dirs, files in os.walk(OUTPUT_FOLDER):\n",
     "    for file in files:\n",
+    "        if file.startswith(\"META-\"):\n",
+    "            continue\n",
     "        try:\n",
-    "            with open(os.path.join(root, file), 'r') as f:\n",
+    "            with open(os.path.join(root, file), \"r\") as f:\n",
     "                total_lines += sum(1 for line in f)\n",
     "                file_count += 1\n",
     "        except Exception as e:\n",
@@ -262,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
