--- a/processing/kol_clean_data.ipynb
+++ b/processing/kol_clean_data.ipynb
@@ -46,7 +46,7 @@
      "output_type": "stream",
      "text": [
       "Total unique trips before boundaries:  5194\n",
-      "Total unique trips after boundaries:  4022\n"
+      "Total unique trips after boundaries:  2647\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipped trajectories: 11\n"
+      "Skipped trajectories: 3\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
     "        last_timestamp = current_timestamp\n",
     "        last_driver_id = current_driver_id\n",
     "        # Check if trajectory is empty\n",
-    "        if len(trajectory) >= 100:\n",
+    "        if len(trajectory) >= 10:\n",
     "            save_current_trajectory(\n",
     "                OUTPUT_FOLDER=OUTPUT_FOLDER,\n",
     "                file_name=name_counter,\n",
@@ -144,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"K_\", number=50, create_test_set=True)"
+    "# create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"K_\", number=50, create_test_set=True)"
    ]
   },
   {
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "150.3513097072419\n"
+      "147.47467876039303\n"
      ]
     }
    ],
@@ -177,6 +177,8 @@
     "\n",
     "for root, dirs, files in os.walk(OUTPUT_FOLDER):\n",
     "    for file in files:\n",
+    "        if file.startswith(\"META-\"):\n",
+    "            continue\n",
     "        try:\n",
     "            with open(os.path.join(root, file), 'r') as f:\n",
     "                total_lines += sum(1 for line in f)\n",
@@ -205,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
