--- a/processing/rome_clean_data.ipynb
+++ b/processing/rome_clean_data.ipynb
@@ -339,14 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "129.44901531728667\n"
+      "111.0228832951945\n"
      ]
     }
    ],
@@ -356,6 +356,8 @@
     "\n",
     "for root, dirs, files in os.walk(OUTPUT_FOLDER):\n",
     "    for file in files:\n",
+    "        if file.startswith(\"META-\"):\n",
+    "            continue\n",
     "        try:\n",
     "            with open(os.path.join(root, file), 'r') as f:\n",
     "                total_lines += sum(1 for line in f)\n",
@@ -384,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
