--- a/heatmaps/rome_heatmap.ipynb
+++ b/heatmaps/rome_heatmap.ipynb
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Heatmap saved to ../rome/output/rome_heatmap.html\n"
+      "Heatmap saved to output/rome\\rome_heatmap.html\n"
      ]
     }
    ],
@@ -58,16 +58,17 @@
     "HeatMap(coordinates, radius=17.5, blur=15).add_to(map)\n",
     "\n",
     "# Save the map to an HTML file\n",
-    "map_path = os.path.join(\"../rome/output/\", \"rome_heatmap.html\")\n",
+    "map_path = os.path.join(\"output/rome\", \"rome_heatmap.html\")\n",
     "map.save(map_path)\n",
     "\n",
-    "print(\"Heatmap saved to\", map_path)\n"
+    "print(\"Heatmap saved to\", map_path)\n",
+    " "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "master_repo",
    "language": "python",
    "name": "python3"
   },
@@ -81,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
