--- a/visualization/lsh/grid/visualise_grid.ipynb
+++ b/visualization/lsh/grid/visualise_grid.ipynb
@@ -16579,7 +16579,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "master",
    "language": "python",
    "name": "python3"
   },
@@ -16593,7 +16593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
