--- a/benchmarks/dtw_benchmark.ipynb
+++ b/benchmarks/dtw_benchmark.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -21,30 +21,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from constants import PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, SIMILARITIES_OUTPUT_FOLDER_PORTO, SIMILARITIES_OUTPUT_FOLDER_ROME, NUMBER_OF_TRAJECTORIES\n",
-        "\n",
-        "DATA_ROME = f\"../{ROME_OUTPUT_FOLDER}/\"\n",
-        "TEST_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-50.txt\"\n",
-        "FULL_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "SIMILARITIES_OUTPUT_FOLDER_ROME = f\"../{SIMILARITIES_OUTPUT_FOLDER_ROME}/\"\n",
-        "DTW_FILENAME_ROME = f\"rome-dtw-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
-        "DTW_FILENAME_TEST_ROME = \"rome-dtw-50.csv\"\n",
-        "\n",
-        "DATA_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
-        "TEST_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-50.txt\"\n",
-        "FULL_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
-        "SIMILARITIES_OUTPUT_FOLDER_PORTO = f\"../{SIMILARITIES_OUTPUT_FOLDER_PORTO}/\"\n",
-        "DTW_FILENAME_PORTO = f\"porto-dtw-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
-        "DTW_FILENAME_TEST_PORTO = \"porto-dtw-50.csv\"\n"
+        "NUMBER_OF_TRAJECTORIES_REAL = 100\n",
+        "NUMBER_OF_TRAJECTORIES_TEST = 50"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from constants import PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, SIMILARITIES_OUTPUT_FOLDER_PORTO, SIMILARITIES_OUTPUT_FOLDER_ROME, DTW_SIMILARITIES_OUTPUT_FOLDER_ROME, DTW_SIMILARITIES_OUTPUT_FOLDER_PORTO\n",
+        "\n",
+        "## Rome\n",
+        "    #Data\n",
+        "DATA_ROME = f\"../{ROME_OUTPUT_FOLDER}/\"\n",
+        "TEST_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES_TEST}.txt\"\n",
+        "FULL_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES_REAL}.txt\"\n",
+        "SIMILARITIES_OUTPUT_FOLDER_ROME = f\"../{DTW_SIMILARITIES_OUTPUT_FOLDER_ROME}/\"\n",
+        "    #Filenames\n",
+        "DTW_FILENAME_ROME = f\"rome-dtw-{NUMBER_OF_TRAJECTORIES_REAL}.csv\"\n",
+        "DTW_FILENAME_TEST_ROME = f\"rome-dtw-{NUMBER_OF_TRAJECTORIES_TEST}.csv\"\n",
+        "\n",
+        "\n",
+        "## Porto\n",
+        "    #Data\n",
+        "DATA_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
+        "TEST_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES_TEST}.txt\"\n",
+        "FULL_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES_REAL}.txt\"\n",
+        "SIMILARITIES_OUTPUT_FOLDER_PORTO = f\"../{DTW_SIMILARITIES_OUTPUT_FOLDER_PORTO}/\"\n",
+        "    #Filenames\n",
+        "DTW_FILENAME_PORTO = f\"porto-dtw-{NUMBER_OF_TRAJECTORIES_REAL}.csv\"\n",
+        "DTW_FILENAME_TEST_PORTO = f\"porto-dtw-{NUMBER_OF_TRAJECTORIES_TEST}.csv\"\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -61,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -71,7 +88,7 @@
         "def generate_dtw_similarities(\n",
         "    data_folder: str, meta_file: str, file_name: str, similarities_output_folder: str\n",
         "):\n",
-        "    deleteFile(file_name, similarities_output_folder)\n",
+        "    deleteFile(file_name, similarities_output_folder) # Delete file if it exists before running\n",
         "\n",
         "    files = mfh.read_meta_file(meta_file)\n",
         "    trajectories = fh.load_trajectory_files(files, data_folder)\n",
@@ -102,11 +119,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# DTW similarities for Rome\n",
         "\n",
         "# Test set\n",
         "# generate_dtw_similarities(\n",
@@ -118,9 +134,9 @@
         "\n",
         "# Full set\n",
         "# generate_dtw_similarities(DATA_ROME, FULL_SET_ROME, DTW_FILENAME_ROME)\n",
-        "generate_parallell_dtw_similarities(\n",
-        "    DATA_ROME, FULL_SET_ROME, DTW_FILENAME_ROME, SIMILARITIES_OUTPUT_FOLDER_ROME\n",
-        ")"
+        "# generate_parallell_dtw_similarities(\n",
+        "#     DATA_ROME, FULL_SET_ROME, DTW_FILENAME_ROME, SIMILARITIES_OUTPUT_FOLDER_ROME\n",
+        "# )"
       ]
     },
     {
@@ -132,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -163,7 +179,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "master",
       "language": "python",
       "name": "python3"
     },
@@ -177,7 +193,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.7"
+      "version": "3.13.0"
     }
   },
   "nbformat": 4,
