Update notebook, remove unwanted constants

--- a/computation/similarity_values/true/compute_true_dtw_similarity_values.ipynb
+++ b/computation/similarity_values/true/compute_true_dtw_similarity_values.ipynb
@@ -21,42 +21,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "NUMBER_OF_TRAJECTORIES_REAL = 100\n",
-        "NUMBER_OF_TRAJECTORIES_TEST = 50"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from constants import PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, SIMILARITIES_OUTPUT_FOLDER_PORTO, SIMILARITIES_OUTPUT_FOLDER_ROME, DTW_SIMILARITIES_OUTPUT_FOLDER_ROME, DTW_SIMILARITIES_OUTPUT_FOLDER_PORTO\n",
+        "NUMBER_OF_TRAJECTORIES = 50\n",
         "\n",
-        "## Rome\n",
-        "    #Data\n",
-        "DATA_ROME = f\"../{ROME_OUTPUT_FOLDER}/\"\n",
-        "TEST_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES_TEST}.txt\"\n",
-        "FULL_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES_REAL}.txt\"\n",
-        "SIMILARITIES_OUTPUT_FOLDER_ROME = f\"../{DTW_SIMILARITIES_OUTPUT_FOLDER_ROME}/\"\n",
-        "    #Filenames\n",
-        "DTW_FILENAME_ROME = f\"rome-dtw-{NUMBER_OF_TRAJECTORIES_REAL}.csv\"\n",
-        "DTW_FILENAME_TEST_ROME = f\"rome-dtw-{NUMBER_OF_TRAJECTORIES_TEST}.csv\"\n",
+        "#Rome\n",
+        "ROME_DATA_FOLDER  = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/dataset/rome/output\"\n",
+        "ROME_DATA = f\"../{ROME_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
+        "ROME_SIMILARITY_VALUES_RESULT_FOLDER = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/results_true/similarity_values/rome/dtw\"\n",
+        "ROME_DTW_FILENAME =  f\"rome-dtw-{NUMBER_OF_TRAJECTORIES}.csv\"\n",
         "\n",
-        "\n",
-        "## Porto\n",
-        "    #Data\n",
-        "DATA_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
-        "TEST_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES_TEST}.txt\"\n",
-        "FULL_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES_REAL}.txt\"\n",
-        "SIMILARITIES_OUTPUT_FOLDER_PORTO = f\"../{DTW_SIMILARITIES_OUTPUT_FOLDER_PORTO}/\"\n",
-        "    #Filenames\n",
-        "DTW_FILENAME_PORTO = f\"porto-dtw-{NUMBER_OF_TRAJECTORIES_REAL}.csv\"\n",
-        "DTW_FILENAME_TEST_PORTO = f\"porto-dtw-{NUMBER_OF_TRAJECTORIES_TEST}.csv\"\n"
+        "#Porto\n",
+        "PORTO_DATA_FOLDER  = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/dataset/porto/output\"\n",
+        "PORTO_DATA = f\"../{PORTO_DATA_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
+        "PORTO_SIMILARITY_VALUES_RESULT_FOLDER = \"/Users/thomasnitsche/Developer/skole/master/masteroppgave/results_true/similarity_values/porto/dtw\"\n",
+        "PORTO_DTW_FILENAME =  f\"porto-dtw-{NUMBER_OF_TRAJECTORIES}.csv\"\n"
       ]
     },
     {
